Downgraded from Java 17 to Java 8